<resources>
    <string name="app_name">Lottie Example Project</string>


    <string name="select_example">Choose one of example</string>

    // Buttons Title
    <string name="btn_simple_animation">Simple Animation</string>
    <string name="btn_progress_animation">Animation with Progress</string>
    <string name="btn_interaction_animation">Interaction with user</string>
    <string name="btn_animated_font">Animated Font</string>
    <string name="btn_app_intro">Application Intro</string>

    <string name="btn_animation_pause">Pause</string>
    <string name="btn_animation_resume">Resume</string>
    <string name="btn_animation_faster">Faster</string>
    <string name="btn_animation_slower">Slower</string>
    <string name="btn_animation_changeBoxColor">Change Box Color</string>
    <string name="btn_animation_clearBoxColor">Clear Box Color</string>


</resources>
